# kugou-kgm-decoder

./: .gitignore  Cargo.toml  LICENSE  LICENSE_CN  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs
src/decoder/: kugou.rs  mod.rs
