[package]
name = "kgm-decoder"
version = "0.1.2-dev"
authors = ["TanZhou <tanzhou08@qq.com>"]
edition = "2024"
repository = "https://github.com/ghtz08/kuguo-kgm-decoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xz2 = "0.1.7"
infer = "0.19.0"
clap = { version = "4.5.40", features = ["derive"] }
