[package]
name = "kgm-decoder"
version = "0.1.3-dev"
authors = ["TanZhou <tanzhou08@qq.com>"]
edition = "2024"
repository = "https://github.com/ghtz08/kuguo-kgm-decoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
infer = "0.19.0"
xz2 = "0.1.7"
